# search-internet

./: README.md  duckduckgo_api.py  pyproject.toml
